--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    crossorigin=""></script>
 
    <!-- <script defer src="other.js"></script> -->
-    <script defer src="script1.js"></script>
+    <script defer src="script.js"></script>
     <!-- 📌 any variable that is global in any script will be available to all the other scripts
        while as long as they appear after that script 
       so here script.js have access to all the variables of other.js but other.js can't access any variable of script.js -->
